--- a/Notification Service Extension/fa.lproj/Localizable.strings
+++ b/Notification Service Extension/fa.lproj/Localizable.strings
@@ -136,6 +136,9 @@
 /* Button title. Refers to discarding photo/video edits in media composer. */
 "media.button.discard" = "لغو";
 
+/* Push notification for a comment to message */
+"notification.comment.reaction" = "@% به یک نظر عکس‌العمل نشان داد";
+
 /* Push notification for a new comment. Parameter is the text of the comment */
 "notification.commented.with.text" = "نظر نوشت: %@";
 
